# mydns-adapter-win11

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: i18n.rs  logging.rs  main.rs  notify.rs  registry.rs  winservice.rs
